--- a/css/reveal.css
+++ b/css/reveal.css
@@ -1665,3 +1665,13 @@ body {
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
     display: inline-block;
 }
+
+#iframe{
+zoom: 0.5;
+-moz-transform: scale(0.5);
+-moz-transform-origin: 0 0;
+-o-transform: scale(0.5);
+-o-transform-origin: 0 0;
+-webkit-transform: scale(0.5);
+-webkit-transform-origin: 0 0;
+}
